laoding spinner z-index fix

--- a/src/style/GenerateGraphPage.scss
+++ b/src/style/GenerateGraphPage.scss
@@ -3,7 +3,7 @@
   top: 5%;
   margin-left: -25px;
   position: absolute;
-  z-index: 2;
+  z-index: 1101;
 }
 
 .generate__page {
